contact page added and various css fixes

--- a/contact.html
+++ b/contact.html
@@ -25,15 +25,21 @@
 
     <section id="contact-container">
         <div class="map">
-            <img src="" alt="map">
+            <img id="map" src="assets/imgs/preaulardmap.jpg" alt="map">
         </div>
         <div class="form">
-            <img src="" alt="Potion">
             <h2>Nous contacter</h2>
-            <h3>Nous répondons à toutes vos questions.</h3>
-            
-            <!-- le formulaire ici -->
-
+            <h4>Nous répondons à toutes vos questions.</h4>
+            <div class="form-line"></div>
+            <form action="">
+                <label for="username">Nom/Prénom(s)</label>
+                <input type="text" placeholder="Nom/Prénom(s)">
+                <label for="email">Votre mail</label>
+                <input type="email" placeholder="Votre mail ici">
+                <label for="message">Entrez votre message</label>
+                <textarea name="message" id="message" placeholder="Laissez-nous vos coordonnées"></textarea>
+                <button type="submit">Envoyer</button>
+            </form>
         </div>
 
     </section>
@@ -54,9 +60,9 @@
         <div class="f-quicklinks">
             <h4>Liens rapides</h4>
             <ul>
-                <li><a href="#">ACCUEIL</a></li>
-                <li><a href="#">PRODUITS</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="index.html">ACCUEIL</a></li>
+                <li><a href="produits.html">PRODUITS</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
         <div class="f-socials">
