--- a/produits.html
+++ b/produits.html
@@ -90,9 +90,9 @@
         <div class="f-quicklinks">
             <h4>Liens rapides</h4>
             <ul>
-                <li><a href="#">ACCUEIL</a></li>
-                <li><a href="#">PRODUITS</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="index.html">ACCUEIL</a></li>
+                <li><a href="produits.html">PRODUITS</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
         <div class="f-socials">
