--- a/produits.html
+++ b/produits.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaqueries.css">
     <script src="https://kit.fontawesome.com/a95fff360e.js" crossorigin="anonymous"></script>
     <title>La boutique d'Harry - Produits</title>
 </head>
@@ -13,7 +14,8 @@
     <header class="header">
         <nav class="main-nav">
             <div class="nav">
-                <a href="index.html"><img id="logo" src="assets/imgs/logo.png" alt="Logo"></a>  
+                <a href="index.html"><img id="logo" src="assets/imgs/logo.png" alt="Logo"></a>
+                <a href="index.html"><img id="logomobile" src="assets/imgs/logo_mobile.png" alt="Logo"></a> 
             </div>
                 <ul>
                     <li><a href="index.html">ACCUEIL</a></li>
