--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <main class="main">
         <h1 class="title">Une sélection de remèdes</h1>
-        <a href="produits.html"><button class="cta">Découvrir</button></a>
+        <a class="cta" href="produits.html">Découvrir</a>
     </main>
 
     <section class="about">
@@ -68,10 +68,10 @@
         <div class="f-socials">
             <h4>Nous suivre</h4>
             <ul class="socialsflex">
-                <a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a>
-                <a href="https://instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
-                <a href="https://facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                <li><a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="https://instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+                <li><a href="https://facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
             </ul>
         </div>
     </footer>
