--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <body>
 
     <header class="header">
+        <!-- éléments de la navbar mobile / responsive -->
+        <input type="checkbox" id="check">
+        <label for="check" class="icons">
+          <i class="fa-solid fa-bars" id="iconMenu"></i>
+          <i class="fa-solid fa-xmark" id="iconX"></i>
+        </label>
+        <!-- fin des éléments de la navbar mobile / responsive -->
         <nav class="main-nav">
             <div class="nav">
                 <a href="index.html"><img id="logo" src="assets/imgs/logo.png" alt="Logo"></a>
@@ -25,12 +32,14 @@
         </nav>
 
     </header>
-
+    <!-- Ci-dessous le container principal avec un call to action menant à la boutique -->
     <main class="main">
         <h1 class="title">Une sélection de remèdes</h1>
         <a class="cta" href="produits.html">Découvrir</a>
     </main>
+    <!-- fin du container principal menant à la boutique -->
 
+    <!-- la section à propos du site -->
     <section class="about">
         <div class="about-img">
         </div>
@@ -43,7 +52,9 @@
             </p>
         </div>
     </section>
+    <!-- fin de la section à propos -->
 
+    <!-- le footer avec liens vers les différents réseaux (utilisation de fontawesome) -->
     <footer class="footer">
         <div class="f-about">
             <h4>Résumé</h4>
@@ -75,6 +86,7 @@
             </ul>
         </div>
     </footer>
+    <!-- fin du footer -->
 
 </body>
 </html>
