various code fix

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <script src="https://kit.fontawesome.com/a95fff360e.js" crossorigin="anonymous"></script>
     <title>La boutique d'Harry</title>
 </head>
+
 <body>
 
     <header class="header">
@@ -17,18 +19,18 @@
         <a href="index.html"><img id="logomobile" src="assets/imgs/logo_mobile.png" alt="Logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="icons">
-          <i class="fa-solid fa-bars" id="iconMenu"></i>
-          <i class="fa-solid fa-xmark" id="iconX"></i>
+            <i class="fa-solid fa-bars" id="iconMenu"></i>
+            <i class="fa-solid fa-xmark" id="iconX"></i>
         </label>
         <!-- fin des éléments de la navbar mobile / responsive -->
         <nav class="main-nav">
             <div class="nav">
             </div>
-                <ul>
-                    <li><a href="index.html">ACCUEIL</a></li>
-                    <li><a href="produits.html">PRODUITS</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
-                </ul>
+            <ul>
+                <li><a href="index.html">ACCUEIL</a></li>
+                <li><a href="produits.html">PRODUITS</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+            </ul>
         </nav>
 
     </header>
@@ -46,9 +48,10 @@
         <div class="about-txt">
             <h2>A propos</h2>
             <p><strong>Bienvenue sur La boutique d'Harry</strong>
-            . Nous transformons les sorts de guérison emblématiques de la saga en potions magiques consommables. 
-            Chaque potion est méticuleusement conçue pour offrir des bienfaits similaires à ceux des sorts originaux,
-            créant une expérience immersive pour les fans de l'oeuvre de J.K Rowling et les curieux.
+                . Nous transformons les sorts de guérison emblématiques de la saga en potions magiques consommables.
+                Chaque potion est méticuleusement conçue pour offrir des bienfaits similaires à ceux des sorts
+                originaux,
+                créant une expérience immersive pour les fans de l'oeuvre de J.K Rowling et les curieux.
             </p>
         </div>
     </section>
@@ -89,4 +92,5 @@
     <!-- fin du footer -->
 
 </body>
+
 </html>
